fixed content overflow issue in community overview, added RLA to Tim Bailey's name

--- a/app/overview/community_planning/community.css
+++ b/app/overview/community_planning/community.css
@@ -102,6 +102,20 @@ MEDIA QUERIES
     margin-left: 50%;
   }
 
+  .scroller {
+    overflow-y: scroll;
+    height: 380px;
+  }
+
+}
+
+@media(max-width: 1260px) and (min-width: 416px) {
+  
+  .scroller {
+    overflow-y: scroll;
+    height: 380px;
+  }
+
 }
 
 
